charts/shop-deployment-v1.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: shop-v1
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: shop
        version: v1
    spec:
      containers:
        - name: shop
          image: asaker/shop:v1
          ports:
            - containerPort: 3010
