charts/shop-deployment-v2.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: shop-v2
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: shop
        version: v2
    spec:
      containers:
        - name: shop
          image: asaker/shop:v2
          ports:
            - containerPort: 3010
