charts/wharehouse-deployment.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: wharehouse-v1
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: wharehouse
        version: v1
    spec:
      containers:
        - name: wharehouse
          image: asaker/wharehouse:v1
          ports:
            - containerPort: 4000
