charts/shop-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shop
  labels:
    app: shop
spec:
  # type: NodePort
  ports:
    - port: 3010
      # protocol: TCP
      name: http
  selector:
    app: shop
